@@ -1,3 +1,7 @@
+Saturday, December 19, 2009
+	Matt Zweig:
+		* Adds Optional FreeType+FTGL support
+
 Wednesday, December 9, 2009
 	Matt Zweig:
 		* Merged Weapons and QuadTree into the Epiar mainline.
